Upgrade Spring Boot versions and use the Spring Boot dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ buildscript {
     jcenter()
   }
 }
-
 plugins {
-  id "com.jfrog.bintray" version "1.8.4"
+  id "com.jfrog.bintray" version "$bintrayVersion"
+  id 'io.spring.dependency-management' version "$springDependencyManagementVersion"
 }
 
 apply plugin: 'eclipse'
@@ -19,11 +19,17 @@ version = System.getenv('VERSION')?:'master-SNAPSHOT'
 
 repositories {
   mavenLocal()
-  mavenCentral()
   jcenter()
+  mavenCentral()
 }
 
 sourceCompatibility = 1.11
+
+dependencyManagement {
+  imports {
+    mavenBom "org.springframework.boot:spring-boot-starter-parent:$springBootVersion"
+  }
+}
 
 eclipse {
   classpath {
