--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
-foilenInfraPluginVersion=0.9.0
+bintrayVersion=1.8.5
+springDependencyManagementVersion=1.0.10.RELEASE
+springBootVersion=2.4.1
+
+foilenInfraPluginVersion=0.11.0
