--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 bintrayVersion=1.8.5
 springDependencyManagementVersion=1.0.10.RELEASE
-springBootVersion=2.4.1
+springBootVersion=2.4.2
 
-foilenInfraPluginVersion=0.11.0
+foilenInfraPluginVersion=master-SNAPSHOT
