Switch to Maven Central

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-bintrayVersion=1.8.5
 springDependencyManagementVersion=1.0.10.RELEASE
 springBootVersion=2.4.2
 
-foilenInfraPluginVersion=master-SNAPSHOT
+foilenInfraPluginVersion=0.13.0
